Bug 322137 - nepomukfeeder hogs 100% CPU while offline
Summary: nepomukfeeder hogs 100% CPU while offline
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Nepomuk Feeder Agents (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-08 23:39 UTC by Sergio Martins
Modified: 2013-07-11 18:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
image (287.15 KB, image/png)
2013-07-08 23:40 UTC, Sergio Martins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Martins 2013-07-08 23:39:43 UTC
See attached image.

I disabled nepomuk in system settings.
The feeder is offline, and yet, it's using 100% CPU ( while i'm importing mail ).

I'm on git master.

Reproducible: Always
Comment 1 Sergio Martins 2013-07-08 23:40:24 UTC
Created attachment 81014 [details]
image
Comment 2 Sergio Martins 2013-07-08 23:42:08 UTC
The image says 12% because I have 8 cores (4+4), so it's really 100
Comment 3 Daniel Vrátil 2013-07-11 18:47:01 UTC
Git commit 5f8cf5deed1f9ef92ed653c699f6677c26a88c33 by Dan Vrátil.
Committed on 11/07/2013 at 18:45.
Pushed by dvratil into branch 'KDE/4.11'.

Fix high CPU usage caused by EntityCache
Reviewed-By: Sergio Martins

M  +20   -20   akonadi/entitycache_p.h

http://commits.kde.org/kdepimlibs/5f8cf5deed1f9ef92ed653c699f6677c26a88c33