Fix high CPU usage caused by EntityCache

BUG: 322137
Reviewed-By: Sergio Martins